# git-wire

./: .gitignore  .gitwire  .gitwire_local  Cargo.toml  LICENSE  README.md  note.md  plan.md
behavior_check/: direct-sync.sh
src/: check.rs  common.rs  main.rs  sync.rs
src/common/: fetch.rs  parse.rs  sequence.rs
src/common/parse/: parse_test.rs
src/common/sequence/: sequence_test.rs
tests/: cli_integration_test.rs  duplicate_fetches_e2e.rs  version_update_test.rs
