[package]
name = "git-wire"
version = "1.1.0"
edition = "2021"
authors = ["msr1k <msr0210@gmail.com>"]
license = "MIT"
description = """
Wiring part of other repository's code.
(Please see "https://github.com/msr1k/git-wire" for details.)
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.73"
cause = "0.1"
temp-dir = "0.1"
fs_extra = "1"
folder_compare = "0.4"
regex = "1.5.4"
