[package]
name = "git-wire"
version = "1.2.0"
edition = "2021"
authors = ["msr1k <msr0210@gmail.com>"]
license = "MIT"
description = """
Wiring part of other repository's code.
(Please see "https://github.com/msr1k/git-wire" for details.)
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["cargo"]}
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
cause = "0.1.2"
temp-dir = "0.1.11"
fs_extra = "1.3.0"
folder_compare = "0.4.0"
regex = "1.9.1"

[profile.dev]
opt-level = 0
debug = true
